--- a/docusign/manifest.json
+++ b/docusign/manifest.json
@@ -10,7 +10,33 @@
     "changelog": "CHANGELOG.md",
     "description": "Gain insights into Docusign event logs",
     "title": "Docusign",
-    "media": [],
+    "media": [
+      {
+        "caption": "Docusign Overview",
+        "image_url": "images/docusign_overview.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Docusign Envelope",
+        "image_url": "images/docusign_envelope.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Docusign Template",
+        "image_url": "images/docusign_template.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Docusign Account",
+        "image_url": "images/docusign_account.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Docusign Alert",
+        "image_url": "images/docusign_alert.png",
+        "media_type": "image"
+      }
+    ],
     "classifier_tags": [
       "Category::Log Collection",
       "Offering::Integration",
@@ -29,14 +55,26 @@
         "metadata_path": "assets/service_checks.json"
       }
     },
+    "dashboards": {
+      "Docusign - Overview" : "assets/dashboards/docusign_overview.json",
+      "Docusign - Envelope" : "assets/dashboards/docusign_envelope.json",
+      "Docusign - Template" : "assets/dashboards/docusign_template.json",
+      "Docusign - Account" : "assets/dashboards/docusign_account.json",
+      "Docusign - Alert" : "assets/dashboards/docusign_alert.json"
+    },
+    "monitors": {
+      "[Docusign] Credential Leak Detected" : "assets/monitors/credential_leak_activity.json",
+      "[Docusign] Too Many Login Attempts" : "assets/monitors/multiple_login_attempts.json",
+      "[Docusign] Unauthorized IP Address Activity" : "assets/monitors/unauthorized_ip_activity.json"
+    },
     "logs": {
       "source": "docusign"
     }
   },
   "author": {
+    "support_email": "help@datadoghq.com",
     "name": "Datadog",
     "homepage": "https://www.datadoghq.com",
-    "sales_email": "info@datadoghq.com",
-    "support_email": "help@datadoghq.com"
+    "sales_email": "info@datadoghq.com"
   }
 }
