allowing all resources for PER_RESOURCE_EVENTS

--- a/vsphere/assets/configuration/spec.yaml
+++ b/vsphere/assets/configuration/spec.yaml
@@ -297,6 +297,7 @@ files:
             - 'cluster'
             - 'storage_pod'
             - 'vstorage_object_manager'
+            - 'all'
           type: array
           display_default: ['vm', 'host']
           items:
