--- a/spark/assets/configuration/spec.yaml
+++ b/spark/assets/configuration/spec.yaml
@@ -135,6 +135,13 @@ files:
           type: boolean
           display_default: false
           example: true
+      - name: enable_app_id_tags
+        description: |
+          Enable to start submitting App ID as the tag `app_id`.
+        value:
+          type: boolean
+          display_default: false
+          example: false
       - template: instances/http
         overrides:
           auth_token.description: |
